--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+config = "0.11.0"
+lazy_static = "1.4.0"
 structopt = "0.3.13"
 ctrlc = "3.2.0"
+ansi_term = "0.12.1"
+iced = "0.3.0"
+office = "0.8.1"
